New tables, views and corrected old ones.
