# TableModelLibrary/Table/SessionDtc.cs
@@ -1,0 +1,14 @@
+﻿using System;
+using System.Collections.Generic;
+
+namespace TableModelLibrary.Table
+{
+    public partial class SessionDtc
+    {
+        public int Id { get; set; }
+        public int IdDtc { get; set; }
+        public int IdSession { get; set; }
+        public bool? Status { get; set; }
+
+    }
+}
